--- a/src/views/painel-usuario.ejs
+++ b/src/views/painel-usuario.ejs
@@ -8,16 +8,20 @@
   <%- include("./partials/header") %>
   <!--header-fim-->
   <main class="corpo">
+    
+    <div class="painel-usuario">
     <!-- panel-user -->
     <%- include("./partials/panel-user") %>
     <!--panel-user-end-->
-    <section class = "definicao-pedidos">
-      <div class = "titulo-pedidos-favoritos">
+    </div>
+   
+    <section class="definicao-pedidos">
+      <div class="titulo-pedidos-favoritos">
         <h1>STATUS PEDIDOS</h1>
       </div>
-    <section class="corpo-painel-usuario">
-      
-      <div class="quadro-pedidos">
+      <section class="corpo-painel-usuario">
+
+        <div class="quadro-pedidos">
           <div class="todos-quadro-pedidos">
             <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
             <div class="detalhes-pedido">#22613775</div>
@@ -34,112 +38,112 @@
             <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
             <div class="detalhes-pedido">Cartão de Crédito</div>
           </div>
-          <div class = "seta-pedidos">
-            <img src = "/images/seta.svg" />
+          <div class="seta-pedidos">
+            <img src="/images/seta.svg" />
           </div>
-      </div>
-      <div class="quadro-pedidos">
-        <div class="todos-quadro-pedidos">
-          <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
-          <div class="detalhes-pedido">#22613775</div>
         </div>
-        <div class="todos-quadro-pedidos">
-          <div class="detalhes-pedido-titulo">STATUS:</div>
-          <div class="detalhes-pedido">Cancelado</div>
+        <div class="quadro-pedidos">
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
+            <div class="detalhes-pedido">#22613775</div>
+          </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">STATUS:</div>
+            <div class="detalhes-pedido">Cancelado</div>
+          </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">DATA:</div>
+            <div class="detalhes-pedido">24/03/2021</div>
+          </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
+            <div class="detalhes-pedido">Cartão de Crédito</div>
+          </div>
+          <div class="seta-pedidos">
+            <img src="/images/seta.svg" />
+          </div>
         </div>
-        <div class="todos-quadro-pedidos">
-          <div class="detalhes-pedido-titulo">DATA:</div>
-          <div class="detalhes-pedido">24/03/2021</div>
+        <div class="quadro-pedidos">
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
+            <div class="detalhes-pedido">#22613775</div>
+          </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">STATUS:</div>
+            <div class="detalhes-pedido">Cancelado</div>
+          </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">DATA:</div>
+            <div class="detalhes-pedido">24/03/2021</div>
+          </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
+            <div class="detalhes-pedido">Cartão de Crédito</div>
+          </div>
+          <div class="seta-pedidos">
+            <img src="/images/seta.svg" />
+          </div>
         </div>
-        <div class="todos-quadro-pedidos">
-          <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
-          <div class="detalhes-pedido">Cartão de Crédito</div>
+        <div class="quadro-pedidos">
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
+            <div class="detalhes-pedido">#22613775</div>
+          </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">STATUS:</div>
+            <div class="detalhes-pedido">Cancelado</div>
+          </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">DATA:</div>
+            <div class="detalhes-pedido">24/03/2021</div>
+          </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
+            <div class="detalhes-pedido">Cartão de Crédito</div>
+          </div>
+          <div class="seta-pedidos">
+            <img src="/images/seta.svg" />
+          </div>
         </div>
-        <div class = "seta-pedidos">
-          <img src = "/images/seta.svg" />
+        <div class="quadro-pedidos">
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
+            <div class="detalhes-pedido">#22613775</div>
+          </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">STATUS:</div>
+            <div class="detalhes-pedido">Cancelado</div>
+          </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">DATA:</div>
+            <div class="detalhes-pedido">24/03/2021</div>
+          </div>
+          <div class="todos-quadro-pedidos">
+            <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
+            <div class="detalhes-pedido">Cartão de Crédito</div>
+          </div>
+          <div class="seta-pedidos">
+            <img src="/images/seta.svg" />
+          </div>
         </div>
-      </div>
-      <div class="quadro-pedidos">
-      <div class="todos-quadro-pedidos">
-        <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
-        <div class="detalhes-pedido">#22613775</div>
-      </div>
-      <div class="todos-quadro-pedidos">
-        <div class="detalhes-pedido-titulo">STATUS:</div>
-        <div class="detalhes-pedido">Cancelado</div>
-      </div>
-      <div class="todos-quadro-pedidos">
-        <div class="detalhes-pedido-titulo">DATA:</div>
-        <div class="detalhes-pedido">24/03/2021</div>
-      </div>
-      <div class="todos-quadro-pedidos">
-        <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
-        <div class="detalhes-pedido">Cartão de Crédito</div>
-      </div>
-      <div class = "seta-pedidos">
-        <img src = "/images/seta.svg" />
-      </div>
-      </div>
-      <div class="quadro-pedidos">
-    <div class="todos-quadro-pedidos">
-      <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
-      <div class="detalhes-pedido">#22613775</div>
-    </div>
-    <div class="todos-quadro-pedidos">
-      <div class="detalhes-pedido-titulo">STATUS:</div>
-      <div class="detalhes-pedido">Cancelado</div>
-    </div>
-    <div class="todos-quadro-pedidos">
-      <div class="detalhes-pedido-titulo">DATA:</div>
-      <div class="detalhes-pedido">24/03/2021</div>
-    </div>
-    <div class="todos-quadro-pedidos">
-      <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
-      <div class="detalhes-pedido">Cartão de Crédito</div>
-    </div>
-    <div class = "seta-pedidos">
-      <img src = "/images/seta.svg" />
-    </div>
-      </div>
-      <div class="quadro-pedidos">
-  <div class="todos-quadro-pedidos">
-    <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
-    <div class="detalhes-pedido">#22613775</div>
-  </div>
-  <div class="todos-quadro-pedidos">
-    <div class="detalhes-pedido-titulo">STATUS:</div>
-    <div class="detalhes-pedido">Cancelado</div>
-  </div>
-  <div class="todos-quadro-pedidos">
-    <div class="detalhes-pedido-titulo">DATA:</div>
-    <div class="detalhes-pedido">24/03/2021</div>
-  </div>
-  <div class="todos-quadro-pedidos">
-    <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
-    <div class="detalhes-pedido">Cartão de Crédito</div>
-  </div>
-  <div class = "seta-pedidos">
-    <img src = "/images/seta.svg" />
-  </div>
-      </div>
-    </section>
-    <section class = "section-favoritos">
-      <div class="quadro-pedidos-favoritos-descricao">
-        <div class="quadro-pedidos-favoritos">
+      </section>
+      <section class="section-favoritos">
+        <div class="quadro-pedidos-favoritos-descricao">
+          <div class="quadro-pedidos-favoritos">
             <div class="titulo-favoritos-usuario">FAVORITOS</div>
             <div class="pedidos-favoritos-usuario-descritivo"> Aqui você encontra todos os produtos do seu interesse
             </div>
-        </div>
+          </div>
         </div>
         <div class="quadro-pedidos-favoritos-descricao">
           <div class="quadro-pedidos-favoritos">
-              <div class="titulo-favoritos-usuario">FAVORITOS</div>
-              <div class="pedidos-favoritos-usuario-descritivo"> Aqui você encontra todos os produtos do seu interesse
-              </div>
+            <div class="titulo-favoritos-usuario">FAVORITOS</div>
+            <div class="pedidos-favoritos-usuario-descritivo"> Aqui você encontra todos os produtos do seu interesse
+            </div>
           </div>
-          </div>
+        </div>
+      </section>
     </section>
-  </section>
   </main>
   <!--footer-->
   <%- include("./partials/footer") %>
