--- a/src/views/categoria.ejs
+++ b/src/views/categoria.ejs
@@ -2,6 +2,8 @@
 <html lang="pt-BR">
 
   <%- include("./partials/head")%>
+  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/categoria.css" />
 
   <body>
     <!--header-->
