--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -4,6 +4,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <%- include('./partials/head')%>
+  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/login.css" />
 
   <%- include('./partials/header')%>
   <body id="login-page">
