--- a/src/views/painel-usuario.ejs
+++ b/src/views/painel-usuario.ejs
@@ -2,6 +2,8 @@
 <html lang="pt-BR">
 
 <%- include("./partials/head")%>
+<link rel="stylesheet" href="/css/main.css" />
+<link rel="stylesheet" href="/css/confirmacaoPedido.css" />
 
 <body>
   <!--header-->
@@ -11,139 +13,10 @@
     
     <div class="painel-usuario">
     <!-- panel-user -->
-    <%- include("./partials/panel-user") %>
+    <%- include("./partials/user-box") %>
     <!--panel-user-end-->
     </div>
    
-    <section class="definicao-pedidos">
-      <div class="titulo-pedidos-favoritos">
-        <h1>STATUS PEDIDOS</h1>
-      </div>
-      <section class="corpo-painel-usuario">
-
-        <div class="quadro-pedidos">
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
-            <div class="detalhes-pedido">#22613775</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">STATUS:</div>
-            <div class="detalhes-pedido">Cancelado</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">DATA:</div>
-            <div class="detalhes-pedido">24/03/2021</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
-            <div class="detalhes-pedido">Cartão de Crédito</div>
-          </div>
-          <div class="seta-pedidos">
-            <img src="/images/seta.svg" />
-          </div>
-        </div>
-        <div class="quadro-pedidos">
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
-            <div class="detalhes-pedido">#22613775</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">STATUS:</div>
-            <div class="detalhes-pedido">Cancelado</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">DATA:</div>
-            <div class="detalhes-pedido">24/03/2021</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
-            <div class="detalhes-pedido">Cartão de Crédito</div>
-          </div>
-          <div class="seta-pedidos">
-            <img src="/images/seta.svg" />
-          </div>
-        </div>
-        <div class="quadro-pedidos">
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
-            <div class="detalhes-pedido">#22613775</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">STATUS:</div>
-            <div class="detalhes-pedido">Cancelado</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">DATA:</div>
-            <div class="detalhes-pedido">24/03/2021</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
-            <div class="detalhes-pedido">Cartão de Crédito</div>
-          </div>
-          <div class="seta-pedidos">
-            <img src="/images/seta.svg" />
-          </div>
-        </div>
-        <div class="quadro-pedidos">
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
-            <div class="detalhes-pedido">#22613775</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">STATUS:</div>
-            <div class="detalhes-pedido">Cancelado</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">DATA:</div>
-            <div class="detalhes-pedido">24/03/2021</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
-            <div class="detalhes-pedido">Cartão de Crédito</div>
-          </div>
-          <div class="seta-pedidos">
-            <img src="/images/seta.svg" />
-          </div>
-        </div>
-        <div class="quadro-pedidos">
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">NÚMERO DO PEDIDO:</div>
-            <div class="detalhes-pedido">#22613775</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">STATUS:</div>
-            <div class="detalhes-pedido">Cancelado</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">DATA:</div>
-            <div class="detalhes-pedido">24/03/2021</div>
-          </div>
-          <div class="todos-quadro-pedidos">
-            <div class="detalhes-pedido-titulo">PAGAMENTO:</div>
-            <div class="detalhes-pedido">Cartão de Crédito</div>
-          </div>
-          <div class="seta-pedidos">
-            <img src="/images/seta.svg" />
-          </div>
-        </div>
-      </section>
-      <section class="section-favoritos">
-        <div class="quadro-pedidos-favoritos-descricao">
-          <div class="quadro-pedidos-favoritos">
-            <div class="titulo-favoritos-usuario">FAVORITOS</div>
-            <div class="pedidos-favoritos-usuario-descritivo"> Aqui você encontra todos os produtos do seu interesse
-            </div>
-          </div>
-        </div>
-        <div class="quadro-pedidos-favoritos-descricao">
-          <div class="quadro-pedidos-favoritos">
-            <div class="titulo-favoritos-usuario">FAVORITOS</div>
-            <div class="pedidos-favoritos-usuario-descritivo"> Aqui você encontra todos os produtos do seu interesse
-            </div>
-          </div>
-        </div>
-      </section>
-    </section>
   </main>
   <!--footer-->
   <%- include("./partials/footer") %>
