--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -4,7 +4,7 @@
             <h2>USUÁRIO</h2>
             <ol>
                 <a href="/login"><li>LOGIN</li></a>
-                <a><li>MEUS PEDIDOS</li></a>
+                <a href= "/painel-usuario"><li>MEUS PEDIDOS</li></a>
                 <a><li>FAVORITOS</li></a>
                 <a><li>MEUS CUPONS</li></a>
             </ol>
