--- a/src/views/partials/oferta.ejs
+++ b/src/views/partials/oferta.ejs
@@ -1,24 +1,21 @@
 <div class="oferta">
     <h2>Ofertas da Semana</h2>
     <div class="produto">
-        
+
         <div class="desconto">
             <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
                 style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
             <span>31%</span>
         </div>
-       
+
         <div class="imagem">
-            <img src="/images/processador-amd.jpg"
-                class=""
-                alt=""
-                title="AMD Ryzen 5 5600X"
-                >
+            <a href="/produto">
+                <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
         <div class="ctn-produto-preco">
-            <div class="produto-fabricante">Amd</div>
-            <div class="pnome">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
-            </div>
+            </a>
+            <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
+                </a></div>
         </div>
     </div>
     <hr>
@@ -29,16 +26,14 @@
             <span>31%</span>
         </div>
         <div class="imagem">
-            <img src="/images/processador-amd.jpg"
-                class=""
-                alt=""
-                title="AMD Ryzen 5 5600X"
-                >
+            <a href="/produto">
+                <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
         <div class="ctn-produto-preco">
-            <div class="produto-fabricante">Amd</div>
-            <div class="pnome">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
-            </div>
+            </a>
+            <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
+                </a></div>
         </div>
     </div>
+</div>
 </div>
