--- a/src/views/partials/user-box.ejs
+++ b/src/views/partials/user-box.ejs
@@ -3,8 +3,14 @@
     <div class="client-avatar">
       <img src="/images/avatar.png" alt="Avatar" class="avatar">
     </div>
+    
+    <div class = "user-info">
     <h2>Jeffrey Tech</h2>
     <p>address@hotmail.com</p>
+    </div>
+    <label>
+      <button class="profile-btn" type="submit">Meus pedidos</button>
+    </label>
     <label>
       <button class="profile-btn" type="submit">Notificações</button>
     </label>
@@ -16,9 +22,6 @@
     </label>
     <label>
       <button class="profile-btn" type="submit">Avaliações</button>
-    </label>
-    <label>
-      <button class="profile-btn" type="submit">Meus pedidos</button>
     </label>
     <label>
       <button class="profile-btn" type="submit">Sorteios</button>
