--- a/src/views/produto.ejs
+++ b/src/views/produto.ejs
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <%- include("./partials/head")%>
+<link rel="stylesheet" href="/css/main.css" />
 <body>
     <!--header-->
     <%- include("./partials/header") %>
     <!--header-fim-->
     <main>
         <div class="bloco-produto">
-            <div>
+            
                 <div class="imagem-produto">
                     <img src="/images/cadeira-gamer.jpg" alt="cadeira-gamer" class="responsive">
                 </div>
-            </div>
+            
             <div class = "descrição-produto">
                 <div class="titulo-produto descricao-detalhado">
                     <h1 class="nome-produto">Cadeira Gamer Husky Gaming Snow, Black - HSN-BK</h1>
@@ -44,6 +45,8 @@
                         <button name="" type="submit" class="button-laranja" id="">
                             COMPRAR</button>
                     </div>
+                    <hr> 
+                    
             </div>
         </div>
     </main>
