--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <%- include("./partials/head")%>
+  <link rel="stylesheet" href="/css/main.css" />
   <body>
     <!--header-->
     <%- include("./partials/header") %>
