--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -50,17 +50,28 @@
           </div>
         </label>
         <ul id="navbar-list">
-          <li><a href="/produto">Hardware</a></li>
+          <li><a href="/produto">Home</a></li>
+          <li><a href="/produto">News</a></li>
           <li><a href="/produto">Smartphones</a></li>
-          <li><a href="/produto">Perifericos</a></li>
           <li><a href="/produto">Computadores</a></li>
-          <li><a href="/produto">Monitores</a></li>
           <li><a href="/produto">Gamer</a></li>
-          <li><a href="/produto">Home Office</a></li>
+          <li><a href="/produto">Hardware</a></li>
+          <li><a href="/produto">Sobre Nós</a></li>
+          <li><a href="/produto">Contato</a></li>
         </ul>
       </nav>
+      <div class="topnav" id="myTopnav">
+        <a href="/">Home</a>
+        <a href="/produto">News</a>
+        <a href="/produto">Informatica</a>
+        <a href="/produto">Smartphones</a>
+        <a href="/produto">Sobre Nós</a>
+        <a href="/produto">Contato</a>
+      </div>
     </div>
   </div>
+
+  
 
   <div class="searchbar">
     <form class="example" action="action_page.php">
