--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -6,12 +6,20 @@
     <!--header-->
     <%- include("./partials/header") %>
     <!--header-end-->
-    <div class="home-image">
+    <div class="home-image-mobile">
       <img src="images\app_banner.png" alt="" />
     </div>
+
+    <div class="ctn-home-banner">
+      <img src="images\banner_img.jpg" alt="" />
+    </div>
+    <div class="cnt-departamentos-home">
+    </div>
+    <div class="ctn-oferta-mobile">
     <!--oferta-->
     <%- include("./partials/oferta") %>
     <!--FIM-oferta-->
+    </div>
     
     <!--Footer-->
     <%- include("./partials/footer") %>
