--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,7 +14,7 @@
             data-icon="ant-design:user-outlined"
           ></span
         ></a>
-        <a href="#"
+        <a href="/login"
           ><span
             class="iconify"
             data-inline="false"
