--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,7 +42,7 @@ body {
   max-width: 120px;
 }
 
-.home-image img {
+.home-image-mobile img {
   width: 100%;
 }
 
@@ -122,6 +122,7 @@ form.example::after {
   flex-direction: row;
   justify-content: space-around;
   align-items: flex-end;
+  margin-bottom: 0.5em;
 }
 
 .topnav {
@@ -171,12 +172,19 @@ form.example::after {
   color: inherit;
 }
 
-/* OFERTA */
-.oferta {
-  font-size: 1.7rem;
+/*DEPARTAMENTO*/
+
+.departamentos-home{
+  display: none;
+
 }
 
-.oferta h2 {
+/* OFERTA */
+.ctn-oferta-mobile {
+  font-size: 1.5rem;
+}
+
+.ctn-oferta-mobile h2 {
   color: #365dae;
   font-family: "roboto_condensedbold";
   padding: 16px 22px;
@@ -209,7 +217,7 @@ form.example::after {
 
 /* FOOTER  */
 .rodape-principal {
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   /*display: flex;
   flex-wrap: wrap;
   justify-content: center;*/
@@ -356,6 +364,7 @@ span.preco {
     margin-bottom: 1vw;
     display: flex;
     justify-content: center;
+    /* margin-left: 1em; */
   }
   .topnav a {
     color: var(--gray-color);
@@ -373,13 +382,13 @@ span.preco {
 
  .menu {
   display: none;
+  } 
+  .home-image-mobile{
+    display: none;
   }
-  .home-image {
-    
+  .ctn-home-banner {
+    display: block;
   }
-  
- 
-
   /* hi-res laptops and desktops */
   /* .rodape {
     display: flex;
@@ -402,6 +411,7 @@ span.preco {
 
 @media (min-width: 768px) {
   
+  
   .pnome {
     font-size: 3rem;
     display: block;
@@ -421,7 +431,10 @@ span.preco {
   .menu li img {
     margin-bottom: -5px;
   }
-
+  .departamentos-home{
+    display: block;
+  
+  }
   /*.pesquisa{
 	
 }*/
