--- a/src/views/partials/oferta.ejs
+++ b/src/views/partials/oferta.ejs
@@ -1,4 +1,3 @@
-<div class="oferta">
     <h2>Ofertas da Semana</h2>
     <div class="produto">
 
@@ -34,6 +33,4 @@
             <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
                 </a></div>
         </div>
-    </div>
-</div>
-</div>
+    </div
