--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -20,6 +20,7 @@
     <%- include("./partials/oferta") %>
     <!--FIM-oferta-->
     </div>
+    <div class="ctn-oferta-web"></div>
     
     <!--Footer-->
     <%- include("./partials/footer") %>
